--- a/vermanubis_portfolio/frontend/src/components/App.css
+++ b/vermanubis_portfolio/frontend/src/components/App.css
@@ -1,17 +1,30 @@
 body {
+  animation: 2s ease-in fadeIn;
   margin: 0;
   padding: 0;
   background-color: black;
 }
 
-/* content class will be setting global settings for content in the body */
-.content {
+/* set the theme for the main content of the page */
+.main {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: #858585;
+  color: white;
+}
+
+.main h3 {
+  font-family: "Merriweather", serif, "Crimson Text", serif;
+  letter-spacing: 5pt;
+  font-size: 50px;
+}
+
+.music {
+  border: 0;
+  width: 100%;
+  height: 42px;
 }
 
 #parallax {
@@ -43,4 +56,31 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
+}
+
+.geoff {
+  width: 300px;
+  height: 300px;
+  border: round;
+  border-color: white;
+  border-style: solid;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 770px) {
+  #parallax h1 {
+    font-size: 50px;
+  }
+  h3 {
+    font-size: 30px;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
