--- a/vermanubis_portfolio/frontend/src/components/App.css
+++ b/vermanubis_portfolio/frontend/src/components/App.css
@@ -13,6 +13,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: white;
+  white-space: pre-wrap;
 }
 
 .main h3 {
