--- a/vermanubis_portfolio/frontend/src/components/App.css
+++ b/vermanubis_portfolio/frontend/src/components/App.css
@@ -22,7 +22,7 @@ body {
   font-size: 50px;
 }
 
-.music {
+.music iframe {
   border: 0;
   width: 100%;
   height: 42px;
@@ -30,7 +30,7 @@ body {
 
 #parallax {
   /* slide in paralax on load from the top */
-  /* animation: 2s ease-out slideInFromTop; */
+  animation: 2s ease-out slideInFromTop;
 
   /* darken image so that text is easier to read */
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
